2011-09-19  Kevin B. Kenny <kennykb@acm.org>

	* library/tdbcsqlite3.tcl: Reworked handling of the end of results
	to avoid a bug where an empty result set at the end of the results
	would crash in 'allrows' or 'foreach'. Thanks to Colin McCormack
	for reporting the bug and providing a test case.
	* tests/tdbcsqlite.tcl: Added a test case for the above bug,
	observed to fail without the above change and pass with it.

2011-07-19  Kevin B. Kenny <kennykb@acm.org>

	* configure.in:
	* README:
	* library/tdbcsqlite3.tcl:
			Advanced version number to 1.0b17.
	* configure:    autoconf-2.59

2011-07-18  Don Porter  <dgp@users.sourceforge.net>

	* configure.in: Update to latest TEA 3.9 revisions.
	* Makefile.in:
	* tclconfig/*:

	* configure:    autoconf-2.59

2011-04-12  Kevin B. Kenny  <kennykb@acm.org>

	* library/tdbcsqlite3.tcl ([resultset nextresults]):
		Corrected a bug in the handling of multiple result
		sets when one or more is empty.
	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.6):
		Added a test case for the above bug.

2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcsqlite3.test (tdbc::sqlite3-30.[45]):
			Added tests for [foreach] and [allrows] against
			multiple result sets.

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_sqlite3.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.

2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:	Added a semicolon to the end of the -load option
			on 'make test'. Without it, msys make changes all
			the forward slashes in the -load option to backslashes.

	* library/tdbcsqlite3.tcl:
	* tests/tdbcsqlite3.test:
			Changed 'keySequence' in 'foreignkeys' to
			'ordinalPosition' for consistency with 'primarykeys'.

	* configure.in:
	* README:
	* library/tdbcsqlite3.tcl:
	* tclconfig/:	Upgraded the build to use TEA 3.9.
			Advanced version number to 1.0b16.
